--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="text_field_max_width">245dp</dimen>
     <dimen name="small_text_size">16sp</dimen>
+    <dimen name="medium_btn_height">58dp</dimen>
 </resources>
