Fixed most of the layout problems, re-structured the layouts with fragments. Still some minor but annoying problems to fix. 03/03/2022 - 14:37

--- a/app/src/main/res/layout/fragment_login_main.xml
+++ b/app/src/main/res/layout/fragment_login_main.xml
@@ -76,41 +76,33 @@
             android:layout_width="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
             android:layout_marginTop="58dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
+            android:layout_gravity="center_horizontal"
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/sign_up_prompt_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/bottom_space"
-                android:layout_centerVertical="true"
                 android:text="@string/dont_have_an_acc_tv"
                 android:textColor="@color/cod_gray"
                 android:textSize="@dimen/small_text_size"
                 android:textStyle="italic" />
-
-            <Space
-                android:id="@+id/bottom_space"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"/>
 
             <Button
                 android:id="@+id/sign_up_btn"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/bottom_space"
-                android:text="@string/signup_cap"/>
+                android:layout_marginStart="18dp"
+                android:text="@string/signup_cap" />
 
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
