--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,5 @@
     <dimen name="title_text_size">35sp</dimen>
     <dimen name="small_text_size">16sp</dimen>
     <dimen name="medium_btn_height">48dp</dimen>
-    <dimen name="login_linear_layout_padding">24dp</dimen>
+    <dimen name="login_layout_margin">24dp</dimen>
 </resources>
