--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,15 +61,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/username_login"
+                app:errorEnabled="true"
                 app:endIconMode="clear_text"
                 app:startIconContentDescription="@string/content_description_start_icon"
+                app:endIconContentDescription="@string/content_description_end_icon"
                 app:startIconDrawable="@drawable/ic_person">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/username_login_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLength="15" />
+                    android:maxLength="35" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,7 +83,9 @@
                 android:layout_marginTop="8dp"
                 android:hint="@string/password_login"
                 app:endIconMode="password_toggle"
+                app:errorEnabled="true"
                 app:startIconContentDescription="@string/content_description_start_icon"
+                app:endIconContentDescription="@string/content_description_end_icon"
                 app:startIconDrawable="@drawable/ic_lock">
 
                 <com.google.android.material.textfield.TextInputEditText
