--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,11 +41,13 @@
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
         android:hint="@string/username_sign_up"
+        app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fst_h_guideline"
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_person">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -64,11 +66,13 @@
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
         android:hint="@string/first_name_sign_up"
+        app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/snd_h_guideline"
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_person_outline">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -87,11 +91,13 @@
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
         android:hint="@string/last_name_sign_up"
+        app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/trd_h_guideline"
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_person_outline">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -110,11 +116,13 @@
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
         android:hint="@string/email_sign_up"
+        app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fourth_h_guideline"
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_email">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -133,12 +141,14 @@
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
         android:hint="@string/phone_sign_up"
+        app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fifth_h_guideline"
         app:prefixText="+61 "
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_phone_android">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -157,11 +167,14 @@
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
         android:hint="@string/password_sign_up"
+        app:errorEnabled="true"
+        android:inputType="textPassword"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/sixth_h_guideline"
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_lock">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -179,12 +192,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_linear_layout_padding"
         android:layout_marginEnd="@dimen/login_linear_layout_padding"
+        app:errorEnabled="true"
         android:hint="@string/confirm_password_sign_up"
+        android:inputType="textPassword"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/seventh_h_guideline"
         app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
         app:startIconDrawable="@drawable/ic_check_circle">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -270,7 +286,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.06" />
+        app:layout_constraintGuide_percent="0.07" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/back_btn_v_guideline"
