--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -4,6 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgottenPasswordActivity">
+    tools:context=".SignUpActivity">
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/top_back_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintBottom_toTopOf="@+id/back_btn_h_guideline"
+        app:layout_constraintEnd_toStartOf="@+id/back_btn_v_guideline"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75" />
+
+    <TextView
+        android:id="@+id/activity_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_slab"
+        android:text="@string/forgot_your_password_title"
+        android:textColor="@color/denim"
+        android:textSize="@dimen/small_title_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_input"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:hint="@string/email_sign_up"
+        app:startIconContentDescription="@string/content_description_start_icon"
+        app:endIconContentDescription="@string/content_description_end_icon"
+        app:endIconMode="clear_text"
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/email_input_guideline"
+        app:startIconDrawable="@drawable/ic_email">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email_input_et"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:maxLength="35" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/send_email_btn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/medium_btn_height"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:background="@drawable/button_round_style"
+        android:text="@string/send_email"
+        android:textAllCaps="false"
+        android:layout_marginTop="@dimen/button_margin_top_input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_input"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/back_btn_h_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.07" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/back_btn_v_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/email_input_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
