--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,10 @@
 <resources>
     <dimen name="social_icons_size">42dp</dimen>
     <dimen name="social_icons_margin">20dp</dimen>
+    <dimen name="small_title_text_size">28sp</dimen>
     <dimen name="title_text_size">35sp</dimen>
     <dimen name="small_text_size">16sp</dimen>
     <dimen name="medium_btn_height">48dp</dimen>
     <dimen name="login_layout_margin">24dp</dimen>
+    <dimen name="button_margin_top_input">12dp</dimen>
 </resources>
