ForgottenPasswordActivity half done! 06/03/2022 16:58

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    >
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".SignUpActivity">
 
     <androidx.appcompat.widget.AppCompatImageButton
@@ -31,6 +38,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/forgot_password_animation"
+        android:layout_width="@dimen/lottie_square_animation_size"
+        android:layout_height="@dimen/lottie_square_animation_size"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_title"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/forgot_password" />
+
+    <TextView
+        android:id="@+id/forgotten_password_instruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/roboto_slab"
+        android:gravity="center"
+        android:text="@string/forgotten_password_instruction"
+        android:textColor="@color/chathams_blue"
+        android:textSize="@dimen/small_text_size"
+        app:layout_constraintBottom_toTopOf="@+id/email_input_guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_password_animation"
+        app:layout_constraintVertical_bias="1.0" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email_input"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -52,7 +90,7 @@
             android:id="@+id/email_input_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:maxLength="35" />
+            android:maxLength="30" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,13 +98,12 @@
         android:id="@+id/send_email_btn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/medium_btn_height"
-        android:layout_gravity="center_horizontal"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
         android:background="@drawable/button_round_style"
         android:text="@string/send_email"
-        android:textAllCaps="false"
         android:layout_marginTop="@dimen/button_margin_top_input"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email_input"/>
@@ -90,7 +127,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
