--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="cardinal">#B41434</color>
     <color name="chathams_blue">#195386</color>
-    <color name="old_lace">#FDF5ED</color>
+    <color name="pinky_red">#DA688F</color>
 </resources>
