--- a/app/src/main/res/layout/fragment_password_reset_email_sent.xml
+++ b/app/src/main/res/layout/fragment_password_reset_email_sent.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgottenPasswordActivity">
@@ -13,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:src="@drawable/ic_close"
         android:contentDescription="@string/close_btn_content_description"
+        android:src="@drawable/ic_close"
         app:layout_constraintBottom_toTopOf="@+id/close_btn_h_guideline"
         app:layout_constraintEnd_toStartOf="@+id/close_btn_v_guideline"
         app:layout_constraintHorizontal_bias="0.75"
@@ -23,30 +22,31 @@
         app:layout_constraintVertical_bias="0.75" />
 
     <TextView
-        android:id="@+id/activity_title"
+        android:id="@+id/email_sent_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_slab"
-        android:text="@string/forgot_your_password_title"
+        android:text="@string/email_sent"
         android:textColor="@color/denim"
         android:textSize="@dimen/small_title_text_size"
+        app:layout_constraintBottom_toTopOf="@id/email_sent_animation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/close_btn_h_guideline" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/email_sent_animation"
         android:layout_width="@dimen/lottie_square_animation_size"
         android:layout_height="@dimen/lottie_square_animation_size"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.3"
         app:lottie_autoPlay="true"
         app:lottie_rawRes="@raw/email_sent" />
 
     <TextView
-        android:id="@+id/forgotten_password_instruction"
+        android:id="@+id/email_sent_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
@@ -54,12 +54,57 @@
         android:layout_marginEnd="@dimen/login_layout_margin"
         android:fontFamily="@font/roboto_slab"
         android:gravity="center"
-        android:text="@string/forgotten_password_instruction"
+        android:text="@string/password_reset_email_sent_description"
         android:textColor="@color/chathams_blue"
         android:textSize="@dimen/small_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_sent_animation" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/login_btn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/medium_btn_height"
+        android:layout_marginStart="@dimen/login_layout_margin"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="@dimen/login_layout_margin"
+        android:background="@drawable/button_round_style"
+        android:text="@string/login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_sent_description" />
+
+    <LinearLayout
+        android:id="@+id/didnt_receive_email_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@id/login_btn">
+
+        <TextView
+            android:id="@+id/didnt_receive_email_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/didnt_receive_email"
+            android:fontFamily="@font/roboto_slab"
+            android:textColor="@color/chathams_blue"
+            android:textSize="@dimen/smallest_text_size" />
+
+        <TextView
+            android:id="@+id/resend_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:layout_marginStart="6dp"
+            android:fontFamily="@font/roboto_slab"
+            android:text="@string/resend"
+            android:textColor="@color/pinky_red"
+            android:textSize="@dimen/smallest_text_size" />
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/close_btn_h_guideline"
@@ -74,4 +119,5 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
