Fixed textview width issue, adjusted resend text size.

--- a/app/src/main/res/layout/fragment_forgotten_password.xml
+++ b/app/src/main/res/layout/fragment_forgotten_password.xml
@@ -65,6 +65,7 @@
             android:text="@string/forgotten_password_instruction"
             android:textColor="@color/chathams_blue"
             android:textSize="@dimen/small_text_size"
+            android:maxWidth="@dimen/lottie_square_animation_size"
             app:layout_constraintBottom_toTopOf="@+id/email_input_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
