--- a/app/src/main/res/layout/fragment_password_reset_email_sent.xml
+++ b/app/src/main/res/layout/fragment_password_reset_email_sent.xml
@@ -57,6 +57,7 @@
         android:text="@string/password_reset_email_sent_description"
         android:textColor="@color/chathams_blue"
         android:textSize="@dimen/small_text_size"
+        android:maxWidth="@dimen/lottie_square_animation_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_sent_animation" />
@@ -91,7 +92,7 @@
             android:text="@string/didnt_receive_email"
             android:fontFamily="@font/roboto_slab"
             android:textColor="@color/chathams_blue"
-            android:textSize="@dimen/smallest_text_size" />
+            android:textSize="@dimen/small_text_size" />
 
         <TextView
             android:id="@+id/resend_tv"
@@ -102,7 +103,7 @@
             android:fontFamily="@font/roboto_slab"
             android:text="@string/resend"
             android:textColor="@color/pinky_red"
-            android:textSize="@dimen/smallest_text_size" />
+            android:textSize="@dimen/small_text_size" />
 
     </LinearLayout>
 
