--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -181,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dont_have_an_acc_tv"
-                android:textColor="@color/cod_gray"
+                android:textColor="@color/black"
                 android:textSize="@dimen/small_text_size"
                 android:textStyle="italic" />
 
