--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="denim">#0C64B4</color>
     <color name="mystic">#E6ECEE</color>
-    <color name="cod_gray">#0C0C0C</color>
+    <color name="scooter">#28B4C6</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="cardinal">#B41434</color>
