--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,10 +4,12 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/denim</item>
         <item name="colorPrimaryDark">@color/chathams_blue</item>
-        <item name="colorPrimaryVariant">@color/cod_gray</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/mystic</item>
         <item name="colorOnError">@color/cardinal</item>
-        <item name="android:textColorPrimary">@color/cod_gray</item>
+        <item name="android:textColorPrimary">@color/mystic</item>
+        <item name="colorAccent">@color/denim</item>
+        <item name="android:windowLightStatusBar">true</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
